# smashbox

./: .gitignore  LICENSE  README.md  README.rst  mapped.json  pyproject.toml  tox.ini
.github/workflows/: main.yml
padpyght-master/: .gitignore
padpyght-master/padpyght/: __main__.py  calibration.py  configurator.py  default_joy.ini  default_skin.ini  frame_buffer.py  mapper.py  smapper.py  visualizer.py
smashbox/: poller.py  recorder.py
smashbox_viewer/: button_locations.py  button_map.py  button_roles.py  calibrator.py  event_gen.py  gui-thread.py  gui.py  mapper.py  poller.py  settings.py  translator.py
smashbox_viewer/resources/Layouts/: Dustin_Mario_Odyssey.json  Dustin_RTB_Shogi_Butterfly.json  FGC_Dpad_Left.json  FGC_Dpad_Right.json  June_2017_Alpha.json  Ultimate_Legacy.json  default.json
smashbox_viewer/resources/layouts/: Ayo_Melee_Marth_Falcon.json  Ayo_Melee_Spacies.json  Cameron_F_Zero_GX.json  Cameron_Mario_Kart_8.json  Cameron_Rocket_League.json  Cameron_SSBU_SSBM_RoA.json  Captain_L_SSBU_Sheik.json  Dustin_SNES_Left_Hand.json  Dustin_SNES_Right_Hand.json  Generic_Gamecube.json  Generic_Legacy.json  Generic_N64.json  Luberry_UNI_Gen2_PC_Only.json  Luberry_UNI_Gen3.json  MMX_SSBM.json  Mavi_Melty_Blood.json  Mavi_Project_Plus.json  Mavi_UNICLR.json  Melee_Legacy.json  Melee_Recovery.json  Melee_Tilts.json  Negative_GG_Strive.json  Perfect_Marth_6.1.json  Remiko_GG_Strive_Leo.json  Remiko_SSBU_Ness.json  Sids_SSBU_Terry.json  (+8 more)
tests/: consts.py  test_event_gen.py  test_poller.py  test_smashbox.py  test_smashbox_viewer.py  test_translator.py
(+5 files in other folders)
