[tool.poetry]
name = "smashbox_viewer"
version = "0.1.0"
description = ""
authors = ["Michael Bottini <mbottini1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"

[tool.poetry.scripts]
recorder = "smashbox_viewer.recorder:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
