[tool.poetry]
name = "smashbox_viewer"
version = "0.1.0"
description = ""
authors = ["Michael Bottini <mbottini1@gmail.com>",
           "Lawrence Gunnell <lgunnell@pdx.edu>",
           "Bennet Wright <bdw5@pdx>",
           "Jordan Malubay <jmalubay@pdx.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^2.0.1"
Pillow = "^8.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"

[tool.poetry.scripts]
recorder = "smashbox_viewer.recorder:main"
gui = "smashbox_viewer.gui:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
